tests/neg/22145.check
-- [E008] Not Found Error: tests/neg/22145.scala:5:7 -------------------------------------------------------------------
5 |  base.foo() // error
  |  ^^^^^^^^
  |  value foo is not a member of foo.Collection
